--- a/Bronze/css/MainCSS.css
+++ b/Bronze/css/MainCSS.css
@@ -6,7 +6,7 @@
 
 
 
-body{
+/*body{
     background: #F1F3EC;
 }
 
@@ -22,26 +22,6 @@ legend {
     font-size: 20px;
     font-weight: bold;
     font-family: Verdana, Geneva, sans-serif;
-}
-
-h1{
-    margin-bottom: 10px;
-    color: #000000;
-    font-family: Verdana, Geneva, sans-serif;
-    font-size: 26px;
-}
-
-#CTA{
-    margin-bottom: 20px;
-    padding: 0px;
-}
-
-#browse{
-    margin: 0px;
-}
-
-img{
-    margin: 0px;
 }
 
 
@@ -62,10 +42,6 @@ fieldset {
     color: #000000;   
 }
 
-#search-basic{
-    margin-top: 20px;
-    
-}
 input{
     margin-bottom: 15px;
     color: black;
